--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -70,7 +70,9 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="RunbooksListView" SelectionMode="Extended" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="RunbooksListView_SelectionChanged" MouseDoubleClick="RunbooksListView_MouseDoubleClick">
+                    <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                    <TextBox Name="RunbookFilterTextBox" Margin="10,5,10,3" TextChanged="RunbookFilter_TextChanged" />
+                    <ListView x:Name="RunbooksListView" SelectionMode="Extended" Margin="10,0,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="RunbooksListView_SelectionChanged" MouseDoubleClick="RunbooksListView_MouseDoubleClick">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
@@ -104,6 +106,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
+                    </StackPanel>
                     <Button x:Name="ButtonDownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadRunbook_Click" IsEnabled="False"/>
                     <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" Click="ButtonOpenRunbook_Click" IsEnabled="False"/>
                     <Button x:Name="ButtonCreateRunbook" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="New Runbook" Click="ButtonCreateRunbook_Click"/>
