--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -61,18 +61,18 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
-                        <RowDefinition Height="35"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBox Name="RunbookFilterTextBox" Margin="10,5,10,3" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" TextChanged="RunbookFilter_TextChanged" />
-                    <ListView x:Name="RunbooksListView" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"  SelectionMode="Extended" Margin="10,0,10,0" VerticalAlignment="Stretch" SelectionChanged="RunbooksListView_SelectionChanged" MouseDoubleClick="RunbooksListView_MouseDoubleClick">
+                    <TextBox Name="RunbookFilterTextBox" Margin="10,5,10,3" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" TextChanged="RunbookFilter_TextChanged" />
+                    <ListView x:Name="RunbooksListView" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"  SelectionMode="Extended" Margin="10,0,10,0" VerticalAlignment="Stretch" SelectionChanged="RunbooksListView_SelectionChanged" MouseDoubleClick="RunbooksListView_MouseDoubleClick">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
@@ -107,13 +107,13 @@
                         </ListView.View>
                     </ListView>
                     <Button x:Name="ButtonDownloadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Open Local Copy" Click="ButtonOpenRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="ButtonCreateRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="New Runbook" Click="ButtonCreateRunbook_Click"/>
+                    <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Open" Click="ButtonOpenRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="ButtonCreateRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Create New" Click="ButtonCreateRunbook_Click"/>
+                    <Button x:Name="ButtonDeleteRunbook" Grid.Column="3" Grid.Row="2" Margin="5,10,5,0" Content="Delete" Click="ButtonDeleteRunbook_Click"/>
                     <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Upload Draft" Click="ButtonUploadRunbook_Click" />
                     <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Test Draft in Azure" Click="ButtonTestRunbook_Click"/>
                     <Button x:Name="ButtonPublishRunbook" Grid.Column="2" Grid.Row="3" Margin="5,10,5,0" Content="Publish Draft" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="ButtonDeleteRunbook" Grid.Column="0" Grid.Row="4" Margin="5,10,5,0" Content="Delete Runbook" Click="ButtonDeleteRunbook_Click"/>
-                    <Button x:Name="ButtonSourceControlRunbook" Grid.Column="1" Grid.Row="4" Margin="5,10,5,0" Content="Sync Source Control" Click="ButtonSourceControlRunbook_Click" IsEnabled="False" Visibility="Collapsed"/>
+                    <Button x:Name="ButtonSourceControlRunbook" Grid.Column="3" Grid.Row="3" Margin="5,10,5,0" Content="Sync Source Control" Click="ButtonSourceControlRunbook_Click" IsEnabled="False" Visibility="Collapsed"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
