--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -29,6 +29,7 @@
                         <RowDefinition Name="AccountPathLabel" Height="Auto"/>
                         <RowDefinition Name="AccountPathBox" Height="Auto"/>
                         <RowDefinition Name="Certificate" Height="50"/>
+                        <RowDefinition Name="Version" Height="Auto"/>
                         <RowDefinition Name="Status" Height="*"/>
                     </Grid.RowDefinitions>
                     <Label x:Name="workspaceLabel" Content="Base path for runbooks and assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="0" />
@@ -50,8 +51,10 @@
                     <Label x:Name="certificateStatusLabel" Content="Certificate thumbprint to encrypt local assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <TextBox x:Name="certificateTextBox" Margin="5" VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="6"/>
                     <Button x:Name="certificateButton" Content="Change" Margin="5" VerticalAlignment="Bottom" Click="certificateButton_Click" Grid.Column="1" Grid.Row="6"/>
-                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"/>
-                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" IsReadOnly="True" TextWrapping="Wrap" BorderThickness="2" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto"/>
+                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" IsReadOnly="True" TextWrapping="Wrap" BorderThickness="2" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto"/>
+                    <Label x:Name="versionLabel" Content="Version" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="7" Grid.Column="0"/>
+                    <Button x:Name="versionButton" Content="Update" Margin="5" VerticalAlignment="Bottom" Click="updateButton_Click" Grid.Column="1" Grid.Row="7"/>
                     <Button x:Name="PortalButton" Content="Portal" Grid.Column="2" Margin="5" Grid.Row="3" VerticalAlignment="Bottom"  Click="PortalButton_Click"/>
                 </Grid>
             </TabItem>
