Added line break before the ScriptAnalyzer message

--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -207,6 +207,7 @@
         <StackPanel Grid.Row="1" Grid.Column="0">
             <TextBlock Name="WorkStartingTextBlock" FontSize="13" Grid.Row="1" Grid.Column="0" Margin="5,5,0,0" TextWrapping="Wrap">Hello there, thanks for trying out our beta.</TextBlock>
             <TextBlock Name="WorkFinishingTextBlock" FontSize="13" Grid.Row="1" Grid.Column="0" Margin="5,0,0,0" TextWrapping="Wrap">Happy automating!</TextBlock>
+            <TextBlock x:Name="LineBreakTextBlock" FontSize="13" Margin="5,0,0,0" TextWrapping="Wrap"><Run Text=""/></TextBlock>
             <TextBlock x:Name="ScriptAnalyzerTextBlock_Start" FontSize="13" Margin="5,0,0,0" TextWrapping="Wrap"><Run Text=""/>Consider using <Hyperlink RequestNavigate="Hyperlink_ScriptAnalyzer" NavigateUri="https://github.com/PowerShell/PSScriptAnalyzer">PowerShell ScriptAnalyzer</Hyperlink> to validate Runbook Code</TextBlock>
             <TextBlock x:Name="ScriptAnalyzerTextBlock_ISEAddon" FontSize="13" Margin="5,0,0,0" TextWrapping="Wrap"><Run Text=""/>Get <Hyperlink RequestNavigate="Hyperlink_ScriptAnalyzer" NavigateUri="https://www.powershellgallery.com/packages/ISEScriptAnalyzerAddOn">ScriptAnalyzer ISE Add-On</Hyperlink> from PowerShell Gallery</TextBlock>
         </StackPanel>
