--- a/AutomationISE/DSCConfigurationParamDialog.xaml
+++ b/AutomationISE/DSCConfigurationParamDialog.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Runbook Parameters" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
-    
-    <Grid Name="ParametersGrid" Margin="15">
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid Name="ParametersGrid" Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
@@ -16,4 +16,5 @@
             <Button IsCancel="True" MinWidth="60">Cancel</Button>
         </WrapPanel>
     </Grid>
+    </ScrollViewer>
 </Window>
