--- a/AutomationISE/RunbookParamDialog.xaml
+++ b/AutomationISE/RunbookParamDialog.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Runbook Parameters" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
-    
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
     <Grid Name="ParametersGrid" Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -16,4 +16,5 @@
             <Button IsCancel="True" MinWidth="60">Cancel</Button>
         </WrapPanel>
     </Grid>
+    </ScrollViewer>
 </Window>
