--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -244,9 +244,60 @@
                     <Button x:Name="ButtonDownloadAsset" Grid.Column="0" Grid.Row="4" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadAsset_Click" />
                     <Button x:Name="ButtonUploadAsset" Grid.Column="1" Grid.Row="4" Margin="5,10,5,0" Content="Upload" Click="ButtonUploadAsset_Click" />
                     <Button x:Name="ButtonInsertAssets" Grid.Column="2" Grid.Row="4" Margin="5,10,5,0" Content="Insert" Click="ButtonInsertAsset_Click" />
-
                 </Grid>
             </TabItem>
+            <TabItem x:Name="ModuleTab" Header="Modules">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBox Name="ModuleFilterTextBox" Margin="10,10,10,10" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" TextChanged="ModuleFilter_TextChanged" GotFocus="ModuleFilterFocus" LostFocus="ModuleFilterLostFocus" />
+                    <ListView x:Name="ModuleListView" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"  SelectionMode="Extended" Margin="10,0,10,0" VerticalAlignment="Stretch" SelectionChanged="ModuleListView_SelectionChanged" MouseDoubleClick="ModuleListView_MouseDoubleClick">
+                        <ListView.View>
+                            <GridView>
+                                <GridView.ColumnHeaderContextMenu>
+                                    <ContextMenu/>
+                                </GridView.ColumnHeaderContextMenu>
+                                <GridViewColumn DisplayMemberBinding="{Binding Name}">
+                                    <GridViewColumn.Header>
+                                        <GridViewColumnHeader Tag="Name" Click="ModuleListColumnHeader_Click">Name</GridViewColumnHeader>
+                                    </GridViewColumn.Header>
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding SyncStatus}">
+                                    <GridViewColumn.Header>
+                                        <GridViewColumnHeader Tag="SyncStatus" Click="ModuleListColumnHeader_Click">Sync Status</GridViewColumnHeader>
+                                    </GridViewColumn.Header>
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding LastModifiedLocal, StringFormat='{}{0:MM/dd/yy hh:mm tt}'}">
+                                    <GridViewColumn.Header>
+                                        <GridViewColumnHeader Tag="LastModifiedLocal" Click="ModuleListColumnHeader_Click">Last Modified (Local)</GridViewColumnHeader>
+                                    </GridViewColumn.Header>
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding LastModifiedCloud, StringFormat='{}{0:MM/dd/yy hh:mm tt}'}">
+                                    <GridViewColumn.Header>
+                                        <GridViewColumnHeader Tag="LastModifiedCloud" Click="ModuleListColumnHeader_Click">Last Modified (Cloud)</GridViewColumnHeader>
+                                    </GridViewColumn.Header>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                    <Button x:Name="ButtonDeleteModule" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Delete" Click="ButtonDeleteModule_Click"/>
+                    <Button x:Name="ButtonUploadModule" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Upload" Click="ButtonUploadModule_Click" />
+                    <Button x:Name="ButtonRefreshModule" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Refresh" Click="ButtonRefreshModule_Click" />
+                    <Button x:Name="ButtonStorageModule" Grid.Column="3" Grid.Row="2" Margin="5,10,5,0" Content="Storage" Click="ButtonStorageModule_Click" />
+                </Grid>
+            </TabItem>
+
             <TabItem x:Name="feedbackTab" Header="Give Feedback">
                 <Grid>
                     <Grid.ColumnDefinitions>
