--- a/AutomationISE/NewOrEditVariableDialog.xaml
+++ b/AutomationISE/NewOrEditVariableDialog.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="AutomationISE.NewOrEditVariableDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="" Width="300" Height="210" WindowStartupLocation="CenterScreen">
-    
+        Title="" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
     <Grid Name="ParametersGrid" Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -15,15 +15,16 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Label>Type:</Label>
-        <ComboBox x:Name="variableTypeComboBox" Margin="0,0,0,10" Grid.Column="1" />
+        <ComboBox x:Name="variableTypeComboBox" Margin="0,0,0,10" Grid.Column="1" Width="200" />
         <Label Grid.Row="1">Encrypted:</Label>
         <ComboBox x:Name="variableEncryptedComboBox" Margin="0,0,0,10" Grid.Row="1" Grid.Column="1" SelectionChanged="VariableEncryptedComboBox_SelectionChanged" />
         <Label Grid.Row="2">Value:</Label>
-        <TextBox Name="valueTextbox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" />
+        <TextBox Name="valueTextbox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" TextWrapping="Wrap" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
         <PasswordBox Name="encryptedValueTextbox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" Visibility="Collapsed" />
         <WrapPanel Grid.Row="3" Name="ButtonsPanel" Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="0,15,0,0">
             <Button Click="OkButton_Click" IsDefault="True" Name="OkButton" MinWidth="60" Margin="0,0,10,0">OK</Button>
             <Button IsCancel="True" MinWidth="60">Cancel</Button>
         </WrapPanel>
     </Grid>
+    </ScrollViewer>
 </Window>
